# storage/api-docs/api-docs.json
@@ -19,7 +19,7 @@
         }
     ],
     "paths": {
-        "/v1/login": {
+        "/login": {
             "post": {
                 "tags": [
                     "Login"
@@ -344,6 +344,175 @@
                 "summary": "Delete Dossier Medical",
                 "description": "Delete a Dossier Medical",
                 "operationId": "deleteDossierMedical",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "not found"
+                    }
+                },
+                "security": [
+                    {
+                        "passport": []
+                    }
+                ]
+            }
+        },
+        "/gestionnaire": {
+            "get": {
+                "tags": [
+                    "Gestionnaire"
+                ],
+                "summary": "Get list of gestionnaire",
+                "description": "Returns list of gestionnaire",
+                "operationId": "getGestionnaireList",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "not found"
+                    }
+                },
+                "security": [
+                    {
+                        "passport": []
+                    }
+                ]
+            }
+        },
+        "/gestionnaire/{gestionnaire}": {
+            "get": {
+                "tags": [
+                    "Gestionnaire"
+                ],
+                "summary": "Show gestionnaire",
+                "description": "Returns a gestionnaire",
+                "operationId": "showGestionnaire",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "not found"
+                    }
+                },
+                "security": [
+                    {
+                        "passport": []
+                    }
+                ]
+            },
+            "put": {
+                "tags": [
+                    "Gestionnaire"
+                ],
+                "summary": "Update gestionnaire",
+                "description": "Returns a gestionnaire",
+                "operationId": "updateGestionnaire",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "not found"
+                    }
+                },
+                "security": [
+                    {
+                        "passport": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Gestionnaire"
+                ],
+                "summary": "Store gestionnaire",
+                "description": "Returns a gestionnaire",
+                "operationId": "storeGestionnaire",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "not found"
+                    }
+                },
+                "security": [
+                    {
+                        "passport": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "Gestionnaire"
+                ],
+                "summary": "Delete gestionnaire",
+                "description": "Returns list of gestionnaire",
+                "operationId": "deleteGestionnaire",
                 "responses": {
                     "200": {
                         "description": "Successful operation",
@@ -709,7 +878,7 @@
                 ]
             }
         },
-        "/v1/patient/search/{value}": {
+        "patient/search/{value}": {
             "get": {
                 "tags": [
                     "Patient"
